# morning-briefing

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
config/: AppSettings.py
core/: ApplicationContainer.py  container.py
service/: AudioService.py  DatabaseService.py  LlmService.py  TaviliyService.py
tests/: conftest.py  test_audio_service.py  test_container.py  test_database_service.py  test_llm_service.py  test_tavily_service.py
